Stub OTP endpoints and Auth
