# Server/Controllers/OtpVerifyController.cs
@@ -1,0 +1,12 @@
+
+
+
+namespace DarkPatterns.OneTimePassword.Controllers;
+
+public class OtpVerifyController : OtpVerifyControllerBase
+{
+	protected override Task<VerifyOtpActionResult> VerifyOtp(VerifyOtpRequest verifyOtpBody)
+	{
+		return Task.FromResult(VerifyOtpActionResult.BadRequest());
+	}
+}
